Adjusting number of data on small device, fixing width resize, proptypes

--- a/src/styles/mediaquerries.css
+++ b/src/styles/mediaquerries.css
@@ -100,6 +100,11 @@ No media query for `xs` since this is the default in Bootstrap */
     font-size: 12px;
   }
 
+  /* ------- Line Chart ------- */
+  .line-nodata-container {
+    min-height: 340px;
+  }
+
   /* ------- FINANCE SUMMARY ------- */
   div.tooltip {
     display: none;
@@ -240,6 +245,11 @@ No media query for `xs` since this is the default in Bootstrap */
 
   .page-link {
     font-size: 16px;
+  }
+
+  /* ------- Line Chart ------- */
+  .line-nodata-container {
+    min-height: 276px;
   }
 
   /* ------- FINANCE SUMMARY ------- */
